sg-jenkins-server.tf
resource "aws_security_group" "sg-jenkins" {
  name        = "Jenkins-Server-SG"
  description = "Allowing the MySQL traffic"

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  vpc_id = aws_vpc.Main.id

  tags = {
    Name = "Jenkins Server"
    Project = "Test"
  }
}
